--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp watch",
-    "dist": "gulp dist"
+    "build": "gulp build",
+    "deploy": "gh-pages -d docs"
   },
   "browserslist": [
     "last 2 version",
@@ -13,7 +14,7 @@
   ],
   "author": "JP Rajalim",
   "license": "MIT",
-  "homepage": "https://github.com/Jitanpr/starter#readme",
+  "homepage": "https://github.com/Jitanpr/jprajalim",
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
@@ -21,13 +22,13 @@
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.7",
     "del": "^4.1.0",
+    "gh-pages": "^2.1.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-html-replace": "^1.6.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^4.12.0",
